# lumarr

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: auto-merge-release.yml  publish.yml  release.yml
docker/: Dockerfile  README.md  docker-compose.yml
docs/: README.md  cli-reference.md  configuration.md  docker.md  installation.md
src/lumarr/: __init__.py  cli.py  config.py  config_wizard.py  db.py  models.py  sync.py
src/lumarr/api/: __init__.py  letterboxd.py  plex.py  radarr.py  sonarr.py  tmdb.py
src/lumarr/cli/: __init__.py  __main__.py
src/lumarr/cli/commands/: __init__.py  clear.py  common.py  config_cmd.py  history.py  list.py  status.py  sync.py
src/lumarr/cli/core/: __init__.py  context.py  decorators.py  exceptions.py  hooks.py  plugin_loader.py
src/lumarr/cli/display/: __init__.py  console.py  formatters.py  tables.py
src/lumarr/cli/groups/: __init__.py  radarr.py  sonarr.py
src/lumarr/cli/logic/: __init__.py  baseline.py  follow_mode.py  sync_manager.py
src/lumarr/cli/services/: __init__.py  database.py  letterboxd.py  plex.py  radarr.py  sonarr.py
