[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lumarr"
version = "0.4.1"
description = "CLI tool to sync Plex watchlist with Sonarr and Radarr"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
lumarr = "lumarr.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
